# blogweb

./: .dockerignore  .env.production.example  .gitignore  01 - 可行性分析(研究)报告(FAR)_10.doc  README.md  dev.sh  docker-compose.yml  package-lock.json  package.json  体系结构(SAD)报告.docx  软件需求规格说明(SRS).doc
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/articles/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/articles/migrations/: 0001_initial.py  0002_initial.py
backend/comments/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/comments/migrations/: 0001_initial.py  0002_initial.py
backend/config/: pagination.py  settings.py  urls.py
backend/docker/: entrypoint.sh
backend/users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/users/management/commands/: initadmin.py
backend/users/migrations/: 0001_initial.py  0002_user_failed_login_attempts_user_locked_until.py  0003_alter_user_managers.py
deploy/: deploy.sh
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/__tests__/: auth.store.test.js  markdown.util.test.js
frontend/src/api/: admin.js  articles.js  auth.js  comments.js  index.js
frontend/src/assets/: base.css
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/utils/: markdown.js
frontend/src/views/: ArticleDetail.vue  ArticleEditor.vue  HomePage.vue  LoginPage.vue  MyArticles.vue  NotFound.vue  (+2 more)
(+6 files in other folders)
